improve front page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ title: Home
                 analytical rigor with creative problem-solving to deliver
                 results that drive strategic business decisions.
               </p>
+              <p>
+                In my spare time, I enjoy hiking, writing, working on
+                programming projects, and meditating.
+              </p>
               <div class="location-tag">
                 <i class="fas fa-map-marker-alt"></i> Denver, CO
               </div>
