--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ title: Home
                 {% endif %}
               </div>
               <div class="project-details">
-                <h3 class="project-title">{{ project.title }}</h3>
+                <a href="{{ project.url }}"
+                  ><h3 class="project-title">{{ project.title }}</h3></a
+                >
                 <p class="project-description">{{ project.description }}</p>
                 <ul class="project-highlights">
                   {% for highlight in project.highlights %}
